# GoJo-Rika.github.io

./: README.md  blog.html  blog_template.html  contact.html  contact_template.html  generate_portfolio_modified.py  index.html  index_template.html  portfolio-mit_v1.json  portfolio.json  post_template.html  projects.html  projects_template.html  pyproject.toml  requirements.txt  resume.html  resume_template.html  robots.txt  sitemap.xml  tech-stack.html  tech_stack_template.html
blog_posts/: aws-sagemaker-blog-cloud-native-ml-reality-check.md  financial-ai-blog-post-when-ai-agents-wouldn't-cooperate.md  network_security_blog_part_1_pipeline_foundation.md  network_security_blog_part_2_cloud_deployment.md  pytorch-foodvision-mini-part-1-from-notebook-to-pipeline.md  pytorch-foodvision-mini-part-2-the-ui-challenge.md  student-performance-prediction-simple-isnt-always-better.md  text-summarizer-journey-part-1-the-mlops-blueprint.md  text-summarizer-journey-part-2-the-ml-engine-room.md  text-summarizer-journey-part-3-serving-the-model.md  video-summarizer-blog-part-1.md  video-summarizer-blog-part-2.md
css/: blog.css  contact.css  main.css  post-layout.css  post.css  projects.css  resume.css  tech-stack.css
future-work/: project_db.json  updated-data.json
js/: app.js  blog.js  contact.js  post-toc.js  search-index.js  search.js
posts/: building-an-intelligent-video-analyst-crafting-the-agents-brain-part-2.html  building-an-intelligent-video-analyst-the-foundational-pipeline-part-1.html  from-messy-data-to-production-mlops-my-network-security-journey-part-1.html  (+9 more)
(+1 files in other folders)
