[project]
name = "my-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2==3.1.4",
    "markdown2>=2.5.4",
    "markupsafe==3.0.2",
    "pillow>=12.1.1",
]

[tool.ruff]
select = ["E", "F", "ANN", "COM"]
ignore = ["E501", "F401", "ANN201", "ANN001", "COM812"]